Adjust WebGL2RenderingContext::deleteTransformFeedback validation https://bugs.webkit.org/show_bug.cgi?id=223359

Reviewed by Kenneth Russell.

Some checks were bypassed because of
the incorrect context loss condition.

Added an error message when the passed
object belongs to another context.

* LayoutTests/TestExpectations:
* Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::deleteTransformFeedback):

Canonical link: https://commits.webkit.org/252372@main